remove absolute positioning

--- a/src/sections/header.liquid
+++ b/src/sections/header.liquid
@@ -5,7 +5,7 @@
 
     <div class="SiteHeader__logo" itemscope itemtype="http://schema.org/Organization">
       <a href="/" itemprop="url">
-        <img src="{{ section.settings.logo }}" itemprop="logo">
+        <img src="{{ section.settings.logo | img_url }}" itemprop="logo">
       </a>
     </div>
 
