--- a/src/styles/modules/site-header.scss
+++ b/src/styles/modules/site-header.scss
@@ -10,6 +10,7 @@
   grid-template-columns: 100px auto 100px;
   grid-template-rows: 50px;
   align-items: center;
+  background-color: #fff;
 }
 
 .SiteHeader__menu {
