--- a/src/sections/header.liquid
+++ b/src/sections/header.liquid
@@ -1,7 +1,9 @@
 <!-- sections/header -->
 <div data-section-id="{{ section.id }}" data-section-type="header-section">
   <header class="SiteHeader" role="banner">
-    <div class="SiteHeader__menu">hamburger</div>
+    <div class="SiteHeader__menu">
+      <button class="menu">Hamburger</button>
+    </div>
 
     <div class="SiteHeader__logo" itemscope itemtype="http://schema.org/Organization">
       <a href="/" itemprop="url">
